PyMaker/datas/object2/RawHTML/i8901/Python_DOC_referPages.syntaxerror-while-unpacking-dict-in-python.txt
<div class="post-text" itemprop="text">
<p>When I am trying to run an example of <a href="https://github.com/ur1katz/pychromecast/blob/master/pychromecast" rel="nofollow noreferrer">pychromecast</a> library, I get the following failure:</p>
<pre><code>~/pychromecast $ python example.py 
Traceback (most recent call last):
File "example.py", line 11, in &lt;module&gt;
import pychromecast.controllers.youtube as youtube
File "/home/pi/pychromecast/pychromecast/controllers/youtube.py", line 27
REQUEST_PARAMS_SET_PLAYLIST = {**BASE_REQUEST_PARAMS, **SET_PLAYLIST_METHOD}
                                ^
SyntaxError: invalid syntax
</code></pre>
<p>I've tried running this in both Python2 and Python3. What is wrong here?</p>
</div>
<div class="post-text" itemprop="text">
<p>This syntax was released with Python 3.5 as the part of <a href="https://www.python.org/dev/peps/pep-0448/" rel="nofollow noreferrer">PEP 448 - Additional Unpacking Generalizations</a>.</p>
<p>As per the <a href="https://docs.python.org/3/whatsnew/3.5.html#whatsnew-pep-448" rel="nofollow noreferrer">document</a>: since Python 3.5, tuple, list, set, and dictionary displays allow multiple unpackings like:</p>
<pre><code>&gt;&gt;&gt; *range(4), 4
(0, 1, 2, 3, 4)

&gt;&gt;&gt; [*range(4), 4]
[0, 1, 2, 3, 4]

&gt;&gt;&gt; {*range(4), 4, *(5, 6, 7)}
{0, 1, 2, 3, 4, 5, 6, 7}

&gt;&gt;&gt; {'x': 1, **{'y': 2}}
{'x': 1, 'y': 2}
</code></pre>
</div>
<span class="comment-copy">Link to offending line: <a href="https://github.com/ur1katz/pychromecast/blob/master/pychromecast/controllers/youtube.py#L27" rel="nofollow noreferrer">github.com/ur1katz/pychromecast/blob/master/pychromecast/…</a></span>
<span class="comment-copy">This means that the library only supports modern Python. <code>{**BASE_REQUEST_PARAMS, **SET_PLAYLIST_METHOD}</code> works in Python 3.5 and above.</span>
<span class="comment-copy">Thanks! That explains it, I've got Python 3.4.5</span>
<span class="comment-copy"><code>{*..., *...}</code> would create a set, but <code>{**..., **...}</code> creates a dictionary.</span>
